force-app/main/default/objects/Submission_Form__c/Submission_Form__c.object-meta.xml
<CustomObject>
    <label>Submission Form</label>
    <nameField>
        <label>Submission Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submission Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>