force-app/main/default/objects/Submission_Form__c/fields/Anticipated_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Closing_Date__c</fullName>
    <label>Anticipated Closing Date</label>
    <type>Date</type>
</CustomField>