force-app/main/default/objects/Submission_Form__c/fields/Anticipated_Commitment_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Commitment_Date__c</fullName>
    <label>Anticipated Commitment Date</label>
    <type>Date</type>
</CustomField>