force-app/main/default/objects/Submission_Form__c/fields/Appraisal_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Contact_Email__c</fullName>
    <label>Appraisal Contact Email</label>
    <type>Email</type>
</CustomField>