force-app/main/default/objects/Submission_Form__c/fields/Appraisal_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Contact_Name__c</fullName>
    <label>Appraisal Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>