force-app/main/default/objects/Submission_Form__c/fields/Appraisal_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Contact_Phone__c</fullName>
    <label>Appraisal Contact Phone</label>
    <type>Phone</type>
</CustomField>