force-app/main/default/objects/Submission_Form__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <label>Assets</label>
    <type>TextArea</type>
</CustomField>