force-app/main/default/objects/Submission_Form__c/fields/Assets_Description__c.field-meta.xml
<CustomField>
    <fullName>Assets_Description__c</fullName>
    <label>Assets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>