force-app/main/default/objects/Submission_Form__c/fields/AUS__c.field-meta.xml
<CustomField>
    <fullName>AUS__c</fullName>
    <label>AUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DU</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>GUS</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>