force-app/main/default/objects/Submission_Form__c/fields/Borrower_and_Co_Borrower_Spouses__c.field-meta.xml
<CustomField>
    <fullName>Borrower_and_Co_Borrower_Spouses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Borrower and Co-Borrower - Spouses</label>
    <type>Checkbox</type>
</CustomField>