force-app/main/default/objects/Submission_Form__c/fields/Borrower_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_First_Name__c</fullName>
    <label>Borrower First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>