force-app/main/default/objects/Submission_Form__c/fields/Borrower_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Submission Forms (Borrower Name)</relationshipLabel>
    <relationshipName>Submission_Forms5</relationshipName>
    <type>Lookup</type>
</CustomField>