force-app/main/default/objects/Submission_Form__c/fields/Borrower_Phone__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Phone__c</fullName>
    <label>Borrower Phone</label>
    <type>Phone</type>
</CustomField>