force-app/main/default/objects/Submission_Form__c/fields/Borrower_Spouse_Email__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Spouse_Email__c</fullName>
    <label>Borrower Spouse Email</label>
    <type>Email</type>
</CustomField>