force-app/main/default/objects/Submission_Form__c/fields/Borrower_Spouse_Phone__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Spouse_Phone__c</fullName>
    <label>Borrower Spouse Phone</label>
    <type>Phone</type>
</CustomField>