force-app/main/default/objects/Submission_Form__c/fields/Brokered_Loan__c.field-meta.xml
<CustomField>
    <fullName>Brokered_Loan__c</fullName>
    <label>Brokered Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>