force-app/main/default/objects/Submission_Form__c/fields/Buyers_Agent__c.field-meta.xml
<CustomField>
    <fullName>Buyers_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer&apos;s Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Submission Forms</relationshipLabel>
    <relationshipName>Submission_Forms6</relationshipName>
    <type>Lookup</type>
</CustomField>