force-app/main/default/objects/Submission_Form__c/fields/Buyers_Agent_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Buyers_Agent_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer&apos;s Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Submission Forms (Buyer&apos;s Agent)</relationshipLabel>
    <relationshipName>Submission_Forms2</relationshipName>
    <type>Lookup</type>
</CustomField>