force-app/main/default/objects/Submission_Form__c/fields/Buyers_Email__c.field-meta.xml
<CustomField>
    <fullName>Buyers_Email__c</fullName>
    <label>Buyer&apos;s Agent Email</label>
    <type>Email</type>
</CustomField>