force-app/main/default/objects/Submission_Form__c/fields/Buyers_Phone__c.field-meta.xml
<CustomField>
    <fullName>Buyers_Phone__c</fullName>
    <label>Buyer&apos;s Agent Cell Phone</label>
    <type>Phone</type>
</CustomField>