force-app/main/default/objects/Submission_Form__c/fields/Buying_Agent_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Buying_Agent_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buying Agent TC</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Submission Forms (Buying Agent TC)</relationshipLabel>
    <relationshipName>Submission_Forms7</relationshipName>
    <type>Lookup</type>
</CustomField>