force-app/main/default/objects/Submission_Form__c/fields/Closing__c.field-meta.xml
<CustomField>
    <fullName>Closing__c</fullName>
    <label>Closing</label>
    <type>Date</type>
</CustomField>