force-app/main/default/objects/Submission_Form__c/fields/Co_Borrower_Email__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Email__c</fullName>
    <label>Co-Borrower Email</label>
    <type>Email</type>
</CustomField>