force-app/main/default/objects/Submission_Form__c/fields/Co_Borrower_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Borrower Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Submission Forms (Co-Borrower Name)</relationshipLabel>
    <relationshipName>Submission_Forms6</relationshipName>
    <type>Lookup</type>
</CustomField>