force-app/main/default/objects/Submission_Form__c/fields/Co_Borrower_Phone__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Phone__c</fullName>
    <label>Co-Borrower Phone</label>
    <type>Phone</type>
</CustomField>