force-app/main/default/objects/Submission_Form__c/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <label>Commitment</label>
    <type>Date</type>
</CustomField>