force-app/main/default/objects/Submission_Form__c/fields/Condo_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Condo_Review_Type__c</fullName>
    <label>Condo Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Review</fullName>
            </value>
            <value>
                <fullName>Limited Review</fullName>
            </value>
            <value>
                <fullName>Non-Warrantable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>