force-app/main/default/objects/Submission_Form__c/fields/Contracted_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Closing_Date__c</fullName>
    <label>Contracted Closing Date</label>
    <type>Date</type>
</CustomField>