force-app/main/default/objects/Submission_Form__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <label>Credit</label>
    <type>TextArea</type>
</CustomField>