force-app/main/default/objects/Submission_Form__c/fields/Credit_Description__c.field-meta.xml
<CustomField>
    <fullName>Credit_Description__c</fullName>
    <label>Credit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>