force-app/main/default/objects/Submission_Form__c/fields/DPA_Grant__c.field-meta.xml
<CustomField>
    <fullName>DPA_Grant__c</fullName>
    <label>DPA/Grant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No DPA Program</fullName>
            </value>
            <value>
                <fullName>Miami Dade - Lee DPA</fullName>
            </value>
            <value>
                <fullName>Palm Beach - Lee DPA</fullName>
            </value>
            <value>
                <fullName>&quot;Other&quot; DPA Program</fullName>
            </value>
            <value>
                <fullName>&quot;Other&quot; Grant Program</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>