force-app/main/default/objects/Submission_Form__c/fields/DPA_Grant_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>DPA_Grant_Household_Income__c</fullName>
    <label>DPA/Grant Household Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>