force-app/main/default/objects/Submission_Form__c/fields/DPA_Grant_Number_of_Persons_in_Household__c.field-meta.xml
<CustomField>
    <fullName>DPA_Grant_Number_of_Persons_in_Household__c</fullName>
    <label>DPA/Grant Number of Persons in Household</label>
    <length>255</length>
    <type>Text</type>
</CustomField>