force-app/main/default/objects/Submission_Form__c/fields/DPA_Grant_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>DPA_Grant_Program_Name__c</fullName>
    <label>DPA/Grant Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>