force-app/main/default/objects/Submission_Form__c/fields/DPA_Other__c.field-meta.xml
<CustomField>
    <fullName>DPA_Other__c</fullName>
    <label>DPA Other</label>
    <type>TextArea</type>
</CustomField>