force-app/main/default/objects/Submission_Form__c/fields/DPA_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>DPA_Other_Description__c</fullName>
    <label>DPA Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>