force-app/main/default/objects/Submission_Form__c/fields/DU_LP_Manual__c.field-meta.xml
<CustomField>
    <fullName>DU_LP_Manual__c</fullName>
    <label>DU / LP / Manual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DU Only</fullName>
            </value>
            <value>
                <fullName>LP Only</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>