force-app/main/default/objects/Submission_Form__c/fields/Expected_Cash_Out__c.field-meta.xml
<CustomField>
    <fullName>Expected_Cash_Out__c</fullName>
    <label>Expected Cash Out</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>