force-app/main/default/objects/Submission_Form__c/fields/Expected_Funds_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Expected_Funds_to_Close__c</fullName>
    <label>Expected Funds to Close</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>