force-app/main/default/objects/Submission_Form__c/fields/File_Story__c.field-meta.xml
<CustomField>
    <fullName>File_Story__c</fullName>
    <label>File Story</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>