force-app/main/default/objects/Submission_Form__c/fields/General_Notes_Description__c.field-meta.xml
<CustomField>
    <fullName>General_Notes_Description__c</fullName>
    <label>General Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>