force-app/main/default/objects/Submission_Form__c/fields/HOA_Company__c.field-meta.xml
<CustomField>
    <fullName>HOA_Company__c</fullName>
    <label>HOA Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>