force-app/main/default/objects/Submission_Form__c/fields/Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Household_Income__c</fullName>
    <label>Household Income</label>
    <type>TextArea</type>
</CustomField>