force-app/main/default/objects/Submission_Form__c/fields/Household_Income_Description__c.field-meta.xml
<CustomField>
    <fullName>Household_Income_Description__c</fullName>
    <label>Household Income</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>