force-app/main/default/objects/Submission_Form__c/fields/Household_Info__c.field-meta.xml
<CustomField>
    <fullName>Household_Info__c</fullName>
    <label>Household Info</label>
    <type>TextArea</type>
</CustomField>