force-app/main/default/objects/Submission_Form__c/fields/Household_Info_Description__c.field-meta.xml
<CustomField>
    <fullName>Household_Info_Description__c</fullName>
    <label>Household Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>