force-app/main/default/objects/Submission_Form__c/fields/Income_4506T_Multi__c.field-meta.xml
<CustomField>
    <fullName>Income_4506T_Multi__c</fullName>
    <label>Income/4506T</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>W-2 Only</fullName>
            </value>
            <value>
                <fullName>Business Transcripts</fullName>
            </value>
            <value>
                <fullName>1099 Transcripts</fullName>
            </value>
            <value>
                <fullName>Day 1</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>