force-app/main/default/objects/Submission_Form__c/fields/Income_Description__c.field-meta.xml
<CustomField>
    <fullName>Income_Description__c</fullName>
    <label>Income</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>