force-app/main/default/objects/Submission_Form__c/fields/Intentions_for_Current_Home__c.field-meta.xml
<CustomField>
    <fullName>Intentions_for_Current_Home__c</fullName>
    <label>Intentions for Current Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selling prior to closing</fullName>
            </value>
            <value>
                <fullName>Selling after closing</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>Retaining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>