force-app/main/default/objects/Submission_Form__c/fields/Investor_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Investor_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Submission Forms (Investor)</relationshipLabel>
    <relationshipName>Submission_Forms4</relationshipName>
    <type>Lookup</type>
</CustomField>