force-app/main/default/objects/Submission_Form__c/fields/Listing_Agent_TC__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_TC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Agent TC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Submission Forms (Listing Agent TC)</relationshipLabel>
    <relationshipName>Submission_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>