force-app/main/default/objects/Submission_Form__c/fields/Loan_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Loan_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Submission_Forms4</relationshipName>
    <type>Lookup</type>
</CustomField>