force-app/main/default/objects/Submission_Form__c/fields/Loan_Coordinator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Loan_Coordinator_Phone__c</fullName>
    <label>Loan Coordinator Phone</label>
    <type>Phone</type>
</CustomField>