force-app/main/default/objects/Submission_Form__c/fields/Loan_Originator__c.field-meta.xml
<CustomField>
    <fullName>Loan_Originator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Originator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Submission_Forms3</relationshipName>
    <type>Lookup</type>
</CustomField>