force-app/main/default/objects/Submission_Form__c/fields/Loan_Originator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Loan_Originator_Phone__c</fullName>
    <label>Loan Originator Phone</label>
    <type>Phone</type>
</CustomField>