force-app/main/default/objects/Submission_Form__c/fields/Loan_Processor__c.field-meta.xml
<CustomField>
    <fullName>Loan_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Processor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Submission_Forms5</relationshipName>
    <type>Lookup</type>
</CustomField>