force-app/main/default/objects/Submission_Form__c/fields/Loan_Processor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Loan_Processor_Phone__c</fullName>
    <label>Loan Processor Phone</label>
    <type>Phone</type>
</CustomField>