force-app/main/default/objects/Submission_Form__c/fields/Loan_Program__c.field-meta.xml
<CustomField>
    <fullName>Loan_Program__c</fullName>
    <label>Loan Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>40 yr Fixed</fullName>
            </value>
            <value>
                <fullName>40 Yr Adjustable</fullName>
            </value>
            <value>
                <fullName>30 yr Fixed</fullName>
            </value>
            <value>
                <fullName>30 yr Interest Only</fullName>
            </value>
            <value>
                <fullName>20 yr Fixed</fullName>
            </value>
            <value>
                <fullName>15 yr Fixed</fullName>
            </value>
            <value>
                <fullName>3/1 yr ARM</fullName>
            </value>
            <value>
                <fullName>3/1 yr Interest Only ARM</fullName>
            </value>
            <value>
                <fullName>5/1 yr ARM</fullName>
            </value>
            <value>
                <fullName>5/1 yr Interest Only ARM</fullName>
            </value>
            <value>
                <fullName>7/1 yr ARM</fullName>
            </value>
            <value>
                <fullName>7/1 yr Interest Only ARM</fullName>
            </value>
            <value>
                <fullName>10/1 yr ARM</fullName>
            </value>
            <value>
                <fullName>10/1 yr Interest Only ARM</fullName>
            </value>
            <value>
                <fullName>Option ARM</fullName>
            </value>
            <value>
                <fullName>Reverse Mortgage</fullName>
            </value>
            <value>
                <fullName>Money Merge Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>