force-app/main/default/objects/Submission_Form__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refinance Cash-Out</fullName>
            </value>
            <value>
                <fullName>Refinance Rate &amp; Term</fullName>
            </value>
            <value>
                <fullName>HELOC</fullName>
            </value>
            <value>
                <fullName>Cash-Out Refinance</fullName>
            </value>
            <value>
                <fullName>NoCash-Out Refinance</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Refinance No Cash-Out</fullName>
            </value>
            <value>
                <fullName>Refinance Debt Consolidation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>