force-app/main/default/objects/Submission_Form__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>FHA</fullName>
            </value>
            <value>
                <fullName>Jumbo</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reverse Mortgage</fullName>
            </value>
            <value>
                <fullName>FarmersHomeAdministration</fullName>
            </value>
            <value>
                <fullName>NonQM</fullName>
            </value>
            <value>
                <fullName>USDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>