force-app/main/default/objects/Submission_Form__c/fields/Lock_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Lock_Exp_Date__c</fullName>
    <label>Lock Exp Date</label>
    <type>Date</type>
</CustomField>