force-app/main/default/objects/Submission_Form__c/fields/MCC__c.field-meta.xml
<CustomField>
    <fullName>MCC__c</fullName>
    <label>MCC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broward MCC</fullName>
            </value>
            <value>
                <fullName>Miami-Dade MCC</fullName>
            </value>
            <value>
                <fullName>FL Statewide MCC</fullName>
            </value>
            <value>
                <fullName>Palm Beach MCC</fullName>
            </value>
            <value>
                <fullName>No MCC</fullName>
            </value>
            <value>
                <fullName>&quot;Other&quot; MCC</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>