force-app/main/default/objects/Submission_Form__c/fields/MCC_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>MCC_Household_Income__c</fullName>
    <label>MCC Household Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>