force-app/main/default/objects/Submission_Form__c/fields/MCC_Loan__c.field-meta.xml
<CustomField>
    <fullName>MCC_Loan__c</fullName>
    <label>MCC Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>