force-app/main/default/objects/Submission_Form__c/fields/MCC_Number_of_Persons_in_Household__c.field-meta.xml
<CustomField>
    <fullName>MCC_Number_of_Persons_in_Household__c</fullName>
    <label>MCC Number of Persons in Household</label>
    <length>255</length>
    <type>Text</type>
</CustomField>