force-app/main/default/objects/Submission_Form__c/fields/MCC_Other__c.field-meta.xml
<CustomField>
    <fullName>MCC_Other__c</fullName>
    <label>MCC Other</label>
    <type>TextArea</type>
</CustomField>