force-app/main/default/objects/Submission_Form__c/fields/MCC_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>MCC_Other_Description__c</fullName>
    <label>MCC Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>