force-app/main/default/objects/Submission_Form__c/fields/MCC_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>MCC_Program_Name__c</fullName>
    <label>MCC Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>