force-app/main/default/objects/Submission_Form__c/fields/Multiple_Borrower_Pairs__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Borrower_Pairs__c</fullName>
    <label>Multiple Borrower Pairs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>