force-app/main/default/objects/Submission_Form__c/fields/Needs_List__c.field-meta.xml
<CustomField>
    <fullName>Needs_List__c</fullName>
    <label>Needs List</label>
    <type>TextArea</type>
</CustomField>