force-app/main/default/objects/Submission_Form__c/fields/Needs_List_Description__c.field-meta.xml
<CustomField>
    <fullName>Needs_List_Description__c</fullName>
    <label>Pending Documents Requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>