force-app/main/default/objects/Submission_Form__c/fields/New_Build_Bank_Owned__c.field-meta.xml
<CustomField>
    <fullName>New_Build_Bank_Owned__c</fullName>
    <label>New Build/Bank Owned?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>