force-app/main/default/objects/Submission_Form__c/fields/PIW__c.field-meta.xml
<CustomField>
    <fullName>PIW__c</fullName>
    <label>PIW</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>