force-app/main/default/objects/Submission_Form__c/fields/Property_Appraisal_Notes_To_Opener__c.field-meta.xml
<CustomField>
    <fullName>Property_Appraisal_Notes_To_Opener__c</fullName>
    <label>Property / Appraisal / Notes To Opener</label>
    <type>TextArea</type>
</CustomField>