force-app/main/default/objects/Submission_Form__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Multi Family</fullName>
            </value>
            <value>
                <fullName>Attached PUD</fullName>
            </value>
            <value>
                <fullName>Detached PUD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>